--- a/css/styles.css
+++ b/css/styles.css
@@ -34,5 +34,9 @@ tr:nth-child(odd) {
     background-color: #D6EBFF;
    // if it's odd - rows 1,3,5 etc - apply styles
 }
-
+span {
+    display: inline-block;
+    //border: 1px solid red;
+    width: 80px;
+}
 
